Arrumando o l/ink do telefone

--- a/Projeto_01/index.html
+++ b/Projeto_01/index.html
@@ -71,7 +71,7 @@
         <h2>Contatos</h2>
             <ul>
                 <li><a href="tel:(859) 427-6111">(859) 427-6111</a></li>
-                <li><a href="(918) 849-3546">(918) 849-3546</a></li>
+                <li><a href="tel:(918) 849-3546">(918) 849-3546</a></li>
                 <li><a href="mailto:mohann@lohpcn.com">mohann@lohpcn.com</a></li>
             </ul>
     </section>
