Modificação da lista de contatos
Mudando de ul para dl

--- a/Projeto_01/index.html
+++ b/Projeto_01/index.html
@@ -69,11 +69,14 @@
 
         <section id="contatos">
             <h2>Contatos</h2>
-                <ul>
-                    <li><a href="tel:(859) 427-6111">(859) 427-6111</a></li>
-                    <li><a href="tel:(918) 849-3546">(918) 849-3546</a></li>
-                    <li><a href="mailto:mohann@lohpcn.com">mohann@lohpcn.com</a></li>
-                </ul>
+                <dl>
+                    <dt>Telefone: </dt>
+                    <dd><a href="tel:(859) 427-6111">(859) 427-6111</a></dd>
+                    <dd><a href="tel:(918) 849-3546">(918) 849-3546</a></dd>
+                    <br>
+                    <dt>E-mails: </dt>
+                    <dd><a href="mailto:mohann@lohpcn.com">mohann@lohpcn.com</a></dd>
+                </dl>
         </section>
 
         <section id="sites">
