Adicionando um incone e mudando o href do logo do site

--- a/Projeto_02/index.html
+++ b/Projeto_02/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!--colocando o icone do site-->
+    <link rel="icon" href="assets/img/pexels-irwan-fauzi-4858510.jpg">
+
     <title>Projeto 02</title>
 
     <!--Link do css reset-->
@@ -16,7 +19,11 @@
 <body>
     <header id="showcase">
         <div class="header-showcase">
-            <a href="#showcase" class="header-logo_a"><img src="assets/img/ice-cream.png" alt="site icon" height="80px" width="80px" class="header-item header-logo"></a>
+
+            <!--logo do site que ao ser clicada te direciona para o index-->
+            <a href="index.html" class="header-logo_a"><img src="assets/img/ice-cream.png" alt="site icon" height="80px" width="80px" class="header-item header-logo"></a>
+
+            <!--Links que mandam para outros lugares do site-->
             <ul class="header-links">
                     <li class="div-item header-item"><a href="#">Home</a></li>
                     <li class="div-item header-item"><a href="#">Products</a></li>
